--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
 }
 dependencies {
+    compile project(':modules:volley')
     compile "com.google.android.gms:play-services:3.1.+"
     compile "com.android.support:support-v4:20.0.+"
     compile fileTree(dir: 'libs', include: ['*.jar'])
